<resources>
    <string name="app_name">Save The Hoodie</string>
    <string name="back">back</string>
    <string name="only_550">Only about 550 Hooded Plovers remain in Victoria, where 692 beaches are recorded </string>
    <string name="home_page">Know about Hooded Plovers (Hoodies)\nand let\'\s help save them!</string>
    <string name="home_button_1">\tFind out about threats to Hoodies</string>
    <string name="home_button_2">Understand the life cycle of Hoodies</string>
    <string name="home_button_3">Create poster to tell people \nhoodies\' location</string>
    <string name="home_button_4">Join communities\ndedicated to protecting hoodies</string>
    <string name="fact_list_1">Only about 550 Hooded Plovers remain \nin Victoria, where 692 beaches are recorded. </string>
    <string name="fact_list_2">Hooded Plovers face threats from dog \nchasing and horseshoe trampling. </string>
    <string name="fact_list_3">For beach lovers: watch out for \nHoodies nests exposed on the beach. </string>
    <string name="text_floating_button">If you encounter any of the given incidents,
        kindly click on the button below
        to get in touch with the organisations protecting the Hooded Plovers. 😊</string>
    <string name="fact_title_status">Hooded Plovers are Endangered</string>
    <string name="fact_content_status_1">This shy little creature, we affectionately call \'Hoody\',is a shorebird named Hooded Plover.
        Fifteen years ago, the terrible fact was that only 200 hoodies were left, ringing alarm bells in Victoria.
        Therefore, BirdLife Australia has adopted a series of conservations to help the species return to Australian beaches.
        \n\nNotably, the survival rate of the Hooded Plover chicks is one of the lowest of all species,
        i.e. there is only 1 chick growing to an adult in every 100.
        Without human assistance, the survival rate of Hoodies from eggs to fully grown adults is only 2.5%.</string>
    <string name="fact_content_status_2">Up to 95% of nesting failures are due to unintentional beach behavior,
        such as dog chases hoodies near nesting areas; horse tramples the exposed nests on the beach;and even during breeding,
        increasing tourists make it difficult for Hooded Plovers to leave their nests safely and get food for their chicks.
        \n\nIt also results a unstable habitat that climate change leads more frequent tides and storms.
        Notably, inevitable natural enemies appear frequently, including red foxes, silver gulls, magpies and crows.</string>
    <string name="fact_title_kid">Threats from Kids and Pedestrians</string>
    <string name="fact_content_kid">You must be thinking, \“But kids are so cute!
        I wish I could run like them on the beach!\”.
        Although did you know that they are one of the major threats for the Hooded Plovers? Sounds crazy, right?
        The Hooded Plovers\’\ tiny eggs are easy prey with the kids running and pedestrians walking on the beaches.
        \n\nHooded Plovers lay their nests right in the middle of the beaches
        so that they can have an all-round view on their predators.
        But the poor little birds face a tough time saving their eggs from these irregular predators, humans.</string>
    <string name="fact_title_dog">Threats from Dogs and Horses</string>
    <string name="fact_content_dog">We all love to take our pets on the beach to get them some fresh air on their walks, right?
        And we also like to set our pets free off the leash so that they can enjoy their day out.
        But sadly, off the leash dogs also love chasing the Hooded Plovers and end up killing them.
        They also love to explore the beaches to hunt down their nests and eggs to trample them.
        \n\nSimilarly, horses on beaches also tend to trample these small eggs and nests.
        We might not realise these unfortunate things happening in the tiny birds\’\ lives on a normal day,
        but the poor Hooded Plovers face these difficulties regularly.</string>
    <string name="fact_citation1_status">"Family of Hooded Plovers at Point Roadknight"by Glenn Ehmke/BirLife Australia is licensed under CC BY-NC 2.0
        \nSource from http://www.birdlife.org.au/documents/bnb_Bellarine_Surf_Coast_final_MS_PDF_opt.pdf</string>
    <string name="fact_citation2_status">\"Baby Plover under shelter\" by Parks Victoria is licensed under CC BY-NC 2.0
        \nSource from https://www.flickr.com/photos/56027284@N03/5979682433</string>
    <string name="fact_citation1_dog">\"Dogs chasing Hoodies\" by Elizabeth Steele-Collins is licensed under CC BY-NC 2.0
        \nSource from http://birdlife.org.au/documents/BNB-Word_about_the_Hood-Edition_18-December-2017.pdf</string>
    <string name="fact_citation2_dog">\"Hoof vs Hoodie\" by BirdLife Australia is licensed under CC BY-NC 2.0
        \nSource from http://www.birdlife.org.au/documents/BNB_2019_Beach-nesting_Birds_Conference_summary_report.pdf</string>
    <string name="fact_citation2_kid">\"Charadriidae - Hooded Plover\" by julie burgher is licensed under CC BY-NC 2.0
        \nSource from https://www.flickr.com/photos/55310085@N06/23668668046</string>
    <string name="call_bird_life">Call for Birdlife</string>
    <string name="map">Hoodies\' Habitat</string>
    <string name="support_menu">More Info</string>
    <string name="do_you_know">Do you know?</string>
    <string name="use_app">Try using our app to help them</string>
    <string name="explore_link_1">https://birdlife.org.au/bird-profile/hooded-plover</string>
    <string name="explore_link_2">https://ebird.org/species/hooplo2</string>
    <string name="explore">Explore some facts</string>
    <string name="coming_soon">Coming Soon ....</string>
    <string name="page_bar_home">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\tSave the Hoodie</string>
    <string name="page_bar_map">\t\t\t\t\t\t\t Distribution of Hooded Plovers</string>
    <string name="page_bar_support">\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t Support </string>
    <string name="home">Home</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibHd1dTAwMjEiLCJhIjoiY2tlZmYwcXR4MGsyODMzdXEyeGhlM21taiJ9.V4hkxkJ5mhH0NMCWoldlyw</string>
    <string name="to_map_bt">View Hoodies\' Distribution on Map</string>
    <string name="eggs">Eggs</string>
    <string name="chick">Chick</string>
    <string name="juvenile">Juvenile</string>
    <string name="adult">Adult</string>
    <string name="_34_39_days">34-39 days</string>
    <string name="_10_12_months">10-12 months</string>
    <string name="_26_28_days">26-28 days</string>
    <string name="_9_months">9 months</string>
    <string name="lifecycle_note">Click on any stage to see more details 👇</string>
    <string name="stage_description_1">
        \t\t\t\t\t•Survival rate \t\t\t\t\t\t\t\t\t\t\t\t\t\t– 23%
        \n\n\t\t\t\t\t•Major threat \t\t\t\t\t\t\t\t\t\t\t\t\t\t– Natural predators and
        \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\kids
        \n\n\t\t\t\t\t•Size \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t– approx. 37mm x
        \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\27mm
        \n\n\t\t\t\t\t•Time required to hatch\t\t\t– 26 to 30 days
        \n\n\t\t\t\t\t•How many in a nest \t\t\t\t\t\t– 2 to 3 eggs
        \n\n\t\t\t\t\t•Where to find\t\t\t\t\t\t\t\t\t\t\t\t\t– Open areas on beach</string>
    <string name="stage_description_2">
        \t\t\t\t\t•Survival rate\t\t\t\t\t\t\t\t\t\t\t\t\t\t– 	20%
        \n\n\t\t\t\t\t•Major threat \t\t\t\t\t\t\t\t\t\t\t\t\t\t– Silver gulls and
        \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\horses
        \n\n\t\t\t\t\t•Can they fly \t\t\t\t\t\t\t\t\t\t\t\t\t\t– 	No
        \n\n\t\t\t\t\t•Time required to fly \t\t\t\t\t\t– 34 to 39 days
        \n\n\t\t\t\t\t•Most important need \t\t\t\t– 	Shelter on the beach</string>
    <string name="stage_description_3">
        \t\t\t\t\t•Survival rate \t\t\t\t\t\t\t\t\t\t\t\t\t\t– 	55%
        \n\n\t\t\t\t\t•Major threat \t\t\t\t\t\t\t\t\t\t\t\t\t\t– Natural predators
        \n\n\t\t\t\t\t•Can they fly \t\t\t\t\t\t\t\t\t\t\t\t\t\t– 	Yes (not fully-fledged)
        \n\n\t\t\t\t\t•Time to become adult \t\t\t–	9 months</string>
    <string name="stage_description_4">
        \t\t\t\t\t•Survival rate \t\t\t\t\t\t\t\t\t\t\t\t\t\t– 	91%
        \n\n\t\t\t\t\t•Size \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t– 9cm to 23cm
        \n\n\t\t\t\t\t•Can they fly \t\t\t\t\t\t\t\t\t\t\t\t\t\t– 	Yes
        \n\n\t\t\t\t\t•Breeding frequency \t\t\t\t\t\t–	Usually once a year
        \n\n\t\t\t\t\t•Sound \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t– Piping and deep
        \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\'chook-chook\' call\n\n\t\t</string>
    <string name="report_sighting">Report Sighting</string>
    <string name="connect">Connect with Organizations</string>
    <string name="about_us">About Us</string>
    <string name="youtube_heading">A Song for the Hoodies!</string>
    <string name="get_in_touch">Get In Touch</string>
    <string name="ngo_1">BirdLife Australia manages Beach-Nesting-Bird(BNB) program which is a volunteer program
        that studies the threats to Hooded Plovers and monitors their population size
        to ensure that people are alerted to any decline in population and are able to respond to ensure effective results.</string>
    <string name="nog_2">eBird is the world’s largest birding community managed by the Cornell Lab of Ornithology.
        It offers a way to keep track of your bird lists, photos, and sounds and contribute to science and conservation.</string>
    <string name="call_bildlife">Contact Birdlife Australia if you want to report a Hooded Plover sighting/incident
        or are interested in being a part of the project.</string>
    <string name="bildlife_tel">0452604988</string>
    <string name="zoom_map_in_and_out_instruction">instruction</string>
    <string name="tab_1">Hoodies</string>
    <string name="tab_2">Threats</string>
    <string name="tab_3">Warnings</string>
    <string name="item_1">item1</string>
    <string name="item_2">item2</string>
    <string name="item_3">item3</string>
    <string name="item_4">item4</string>
    <string name="item_5">item5</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="reset">Reset</string>
    <string name="text_view_init">Loading location ...</string>
    <string name="text_pop_button">
    Hey! Excited to create your own poster?
    Choose from the range of stickers below and drag-and-drop them on the whiteboard as you wish! Double click on any sticker to delete it.
    Feel free to share the poster everywhere you like, or save it to your device! Enjoy! :)</string>
    <string name="fb_bt">\t\tJoin it on Facebook\t\t</string>
    <string name="community_0_title">Anna\'s Honours Fieldwork - Hoodie Research \n36 Members ▼ </string>
    <string name="community_1_title">Friends of the Hooded Plover Surfcoast- Victoria \n5 Members ▼ ️</string>
    <string name="community_2_title">Hooded Plover - Birdlife Australia \n2902 Followers ▼</string>
    <string name="community_3_title">Hooded Plover Volunteers \n1876 Followers ▼</string>
    <string name="community_4_title">Friends of the Hooded Plover - Mornington Peninsula \n342 Followers ▼</string>
    <string name="community_0_inrto">Looking for volunteers to help me out with fieldwork on the Victoria coastline
        as part of my honours project exploring the influence of food resource on breeding hooded plover habitat selection</string>
</resources>