<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/white_board_tab_1_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/white_board_tab_1_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_2" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/white_board_tab_1_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_3" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/white_board_tab_1_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_4" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/white_board_tab_1_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_5" />


    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>