<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.home.HomeFragment"
    android:background="@color/white" >


    <com.youth.banner.Banner
        android:id="@+id/mBanner"
        android:layout_width="411dp"
        android:layout_height="253dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.youth.banner.Banner>

    <TextView
        android:id="@+id/tv_home_page"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/home_page"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mBanner" />

    <Button
        android:id="@+id/btn_factlist"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_capsule_home"
        android:backgroundTint="#7468BE"
        android:drawableTop="@drawable/ic3_home_factlist"
        android:elegantTextHeight="true"
        android:elevation="4dp"
        android:fontFamily="@font/roboto"
        android:paddingTop="20dip"
        android:drawablePadding="10dip"
        android:gravity="center_horizontal"
        android:text="@string/home_button_1"
        android:textAllCaps="false"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_life_cycle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_page"
        tools:textStyle="bold" />

    <Button
        android:id="@+id/btn_life_cycle"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/shape_capsule_home"
        android:backgroundTint="#7468BE"
        android:drawableTop="@drawable/ic2_home_birdlifecycle"
        android:elevation="4dp"
        android:fontFamily="@font/roboto"
        android:paddingTop="20dip"
        android:drawablePadding="10dip"
        android:gravity="center_horizontal"
        android:text="@string/home_button_2"
        android:textAllCaps="false"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_factlist"
        tools:textStyle="bold"/>

    <Button
        android:id="@+id/btn_poster"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_capsule_home"
        android:backgroundTint="#7468BE"
        android:drawableTop="@drawable/ic1_home_design"
        android:elevation="4dp"
        android:fontFamily="@font/roboto"
        android:paddingTop="20dip"
        android:drawablePadding="10dip"
        android:gravity="center_horizontal"
        android:text="@string/home_button_3"
        android:textAllCaps="false"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_community"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_page"
        tools:textStyle="bold"/>


    <Button
        android:id="@+id/btn_community"
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/shape_capsule_home"
        android:backgroundTint="#7468BE"
        android:drawableTop="@drawable/ic4_home_community"
        android:elevation="4dp"
        android:fontFamily="@font/roboto"
        android:paddingTop="20dip"
        android:drawablePadding="10dip"
        android:gravity="center_horizontal"
        android:text="@string/home_button_4"
        android:textAllCaps="false"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_poster"
        tools:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>
